<resources>
    <!-- APPLICATION LABELS -->
    <string name="app_name">OpenSesame</string>
    <string name="autofill_label">OpenSesame Autofill Service</string>

    <!--ERROR MESSAGES-->
    <string name="empty_pwd">Empty Password</string>
    <string name="wrong_master">Wrong Master Password</string>
    <string name="pwd_do_not_match">Passwords do not match</string>
    <string name="weak_pwd">Weak Password</string>
    <string name="wrong_pwd">Wrong Password</string>
    <string name="empty_domain">Empty Domain</string>

    <string name="copied_clipboard">Copied to the clipboard</string>
    <string name="enabled_autofill">Autofill already enabled</string>
    <string name="delete_dialog_msg">Are you sure you want to delete your credential?</string>
    <string name="deleteAll_dialog_msg">Are you sure you want to delete ALL your credentials?</string>
    <string name="DELETE">DELETE</string>
    <string name="CANCEL">Cancel</string>

    <!-- TOOLBAR MAIN-->
    <string name="search">Search</string>
    <string name="delete_all">Delete All</string>
    <string name="enable_autofill">Enable Autofill</string>

    <!--LOGIN LAYOUT-->
    <string name="login">LOGIN</string>
    <string name="hello">Hello %1$s</string>
    <string name="insert_password">Insert Password</string>

    <!--REGISTER LAYOUT-->
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome</string>
    <string name="insert_name">Insert Name</string>
    <string name="confirm_password">Confirm Password</string>


    <!--NEW CREDENTIAL LAYOUT-->
    <string name="add">ADD</string>
    <string name="generate">GENERATE</string>
    <string name="new_credential">New Credential</string>
    <string name="new_domain">Insert Domain</string>
    <string name="new_username">Insert Username</string>
    <string name="new_password">Insert Password</string>

    <!--NEW CREDENTIAL & CREDENTIAL ITEM LAYOUT-->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

    <!--CHANGE MASTER LAYOUT-->
    <string name="change_master">Change Master Password</string>
    <string name="old_master">Old Password</string>
    <string name="new_master">New Password</string>
    <string name="confirm_new_master">Confirm New Password</string>
    <string name="change">CHANGE</string>

</resources>