<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/autofill"
        android:title="@string/enable_autofill"
        app:showAsAction="never"/>

    <item
        android:id="@+id/change_master"
        android:title="@string/change_master"
        app:showAsAction="never"/>

</menu>