<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_change_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--CHANGE TEXTVIEW-->
    <TextView
        android:id="@+id/tv_change_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:text="@string/change_master"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lamp_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_change_master"
        app:layout_constraintVertical_bias="0.85" />

    <!--LAMP IMAGE-->
    <ImageView
        android:id="@+id/lamp_change"
        android:layout_width="94dp"
        android:layout_height="86dp"
        android:src="@drawable/genie_lamp"
        app:layout_constraintBottom_toTopOf="@+id/til_old_master"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"/>

    <!--OLD MASTER-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_master"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/til_new_master"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/dark_blue"
        android:hint="@string/old_master"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:layout_constraintVertical_bias="0.9"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--NEW MASTER-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_master"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_change_master"
        android:textColor="@color/dark_blue"
        android:hint="@string/new_master"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <!--CONFIRM NEW MASTER-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_new_master"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_new_master"
        android:textColor="@color/dark_blue"
        android:hint= "@string/confirm_new_master"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:endIconMode="password_toggle"
        app:layout_constraintVertical_bias="0.1"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_new_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--PROGRESS BAR-->
    <ProgressBar
        android:id="@+id/progressBar_change"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/til_confirm_new_master"
        app:layout_constraintBottom_toTopOf="@+id/btn_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:progressDrawable="@drawable/custom_progressbar"
        />

    <!--CHANGE BUTTON-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_button"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_change"
        app:layout_constraintVertical_bias="0.35" />


</androidx.constraintlayout.widget.ConstraintLayout>