<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".DetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--YOUR CREDENTIAL TEXTVIEW-->
    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DA SETTARE"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/badge_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.23"

        />

    <!--BADGE IMAGE-->
    <ImageView
        android:id="@+id/badge_image"
        android:layout_width="87dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/id_card"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.23" />


    <!--USERNAME-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        android:textColor="@color/dark_blue"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/user"
        app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLines="1"

        />
    </com.google.android.material.textfield.TextInputLayout>

    <!--USERNAME COPY BUTTON-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_username_copy"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/files"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        app:layout_constraintVertical_bias="0.39" />


    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/dark_blue"
        android:hint="@string/password"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <!--PASSWORD COPY BUTTON-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_copy"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/files"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_username_copy"
        app:layout_constraintVertical_bias="0.17" />

    <!--UPDATE BUTTON-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintVertical_bias="0.25" />

    <!--DELETE BUTTON-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_delete_button"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>